--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write \"src/**/*.{ts,js}\"",
     "lint": "eslint \"src/**/*.{ts,js}\"",
     "test": "jest",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +17,13 @@
     "@types/jest": "^26.0.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
+    "del": "^5.1.0",
     "eslint": "^7.2.0",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
+    "rollup": "^2.26.10",
+    "rollup-plugin-size-snapshot": "^0.12.0",
+    "rollup-plugin-typescript2": "^0.27.2",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   }
