--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,6 @@
 {
-  "compilerOptions": {
-    "outDir": "dist",
-    "module": "commonjs",
-    "target": "es6",
-    "lib": ["esnext"],
-    "moduleResolution": "node",
-    "strict": true,
-    "noEmitOnError": true,
-    "noImplicitAny": false,
-    "removeComments": false,
-    "sourceMap": true,
-    "declaration": true,
-    "noImplicitReturns": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "esModuleInterop": true
-  },
+  // This is used by `ts language service` and testing.
+  // Includes source and test files.
+  "extends": "./tsconfig.base.json",
   "include": ["src/**/*"]
 }
