--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "styled-grid-helpers",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.cjs.js",
+  "module": "index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "format": "prettier --write \"src/**/*.{ts,js}\"",
     "lint": "eslint \"src/**/*.{ts,js}\"",
@@ -10,7 +15,22 @@
     "test:watch": "npm test -- --watch",
     "build": "rollup -c"
   },
-  "keywords": [],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm t"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "npm run format && npm run lint -- --max-warnings=0"
+    ]
+  },
+  "keywords": [
+    "styled-components",
+    "emotion",
+    "CSS grid",
+    "flex grid"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -19,7 +39,9 @@
     "@typescript-eslint/parser": "^3.2.0",
     "del": "^5.1.0",
     "eslint": "^7.2.0",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "lint-staged": "^10.3.0",
     "prettier": "^2.0.5",
     "rollup": "^2.26.10",
     "rollup-plugin-size-snapshot": "^0.12.0",
