--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "npm run format && npm run lint -- --max-warnings=0"
+      "npm run format",
+      "npm run lint --max-warnings=0"
     ]
   },
   "keywords": [
